--- a/client/src/components/buttonModal.css
+++ b/client/src/components/buttonModal.css
@@ -67,6 +67,7 @@
     height: 55px;
     border: transparent;
     outline: none;
+    box-shadow: 2px 2px 14px -2px rgba(0,0,0,0.4);
     transform: translate(-50%, -10%);
     text-align: center;
     background: #8B2635;
