--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -4,10 +4,10 @@
 
 .nbar {
     color:white;
-    height: 70px;
+    height: 85px;
     display:flex;
     justify-content: space-between;
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.4);
     align-items: center;
     box-shadow: 2px 2px 10px -2px rgba(0,0,0,0.6);
 }
@@ -31,7 +31,7 @@
     border: none;
     color: white;
 }
-.nbar li button {
+.nbar li a {
     font-size: 2rem;
     cursor: pointer;
     transition: all 0.5s;
@@ -43,6 +43,7 @@
     background-color: transparent;
 }
 .nbar li:hover {
+    transform: scale(1.2);
     background-color: rgba(0,0,0,0.2)
 }
 
