--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -23,9 +23,8 @@
     margin:0.5rem;
     margin-left: 15px;
 }
-.siteName button {
+.siteName {
     font-size: 2.5rem;
-    cursor: pointer;
     background: none;
     outline: none;
     border: none;
