--- a/client/src/components/addAClass.css
+++ b/client/src/components/addAClass.css
@@ -29,8 +29,8 @@
     transform: translate(50%, 10%);
 }
 .btn-group button {
-    margin: 5px;
-    box-shadow: 2px 2px 12px -2px rgba(0,0,0, 0.5);
+    margin: 10px;
+    box-shadow: 5px 5px 15px -2px rgba(0,0,0, 0.5);
     font-size: 18px;
     height: 30px;
     width: 85px;
@@ -41,6 +41,7 @@
     cursor: pointer;
 }
 .btn-group button:hover {
+    transform: scale(1.1);
     color: black;
     background-color: #EED2CC;
 }
