--- a/client/src/components/courseSettings.css
+++ b/client/src/components/courseSettings.css
@@ -1,6 +1,104 @@
+.top-right {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+}
 .close-btn {
+  cursor: pointer;
+  background: none;
+  outline: none;
+  font-size: 25px;
+  border: none;
+}
+.center-bar {
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.3);
+  width: 80%;
+  position: absolute;
+  top: 22%;
+  left: 10%;
+  right: 10%;
+  display: flex;
+  border-radius: 10px;
+}
+.center-bar button {
+  box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.3);
+  background: #284b63;
+  margin: 10px;
+  color: white;
+  border: none;
+  height: 30px;
+  width: 200px;
+  outline: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+.center-bar button:hover {
+  transform: scale(1.1);
+  color: black;
+  background: #d9d9d9;
+}
+.close-btn:hover {
+  transform: scale(1.3);
+}
+
+.trash-btn {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  background: none;
+  color: red;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.trash-btn:hover {
+  transform: scale(1.3);
+}
+
+.course-name {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.get-startedMODAL {
+  position: absolute;
+  text-align: center;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%,-15%);
+  width: 600px;
+  font-size: 18px;
+  color: black;
+}
+.category-rows {
+    border-radius: 10px;
+  position: absolute;
+  margin: none;
+  top: 35%;
+  left: 2%;
+  right: 2%;
+  justify-content: center;
+  text-align: center;
+  width: 96%;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.category-row {
+    margin: 10px;
+    border-radius: 5px;
+    height: 35px;
+    font-size: 22px;
+}
+
+.category-name {
     position: absolute;
-    font-size: 25px;
-    top: 5%;
-    right: 5%;
+    top: 10%;
+    left: 2%;
+}
+.percent-worth {
+    position: absolute;
+    top: 10%;
+    right: 10%;
 }
