--- a/client/src/components/confirmDelete.css
+++ b/client/src/components/confirmDelete.css
@@ -14,6 +14,7 @@
     font-size: 22px;
     background: rgb(109, 14, 33);
     cursor: pointer;
+    box-shadow: 5px 5px 15px -2px rgba(0,0,0,0.3);
     color: white;
     margin: 15px;
 }
